# skala-ai-service-prj

./: .gitignore  README.md  app.py  graph.py  md_to_pdf.py  pyproject.toml
agents/: __init__.py  analysis_agent.py  draft_agent.py  formatting_node.py  rag_agent.py  supervisor.py  web_search_agent.py
data/: TRL.md  report_template.md
prompts/: analysis_prompt.txt  draft_prompt.txt
scripts/: prebuilt_db.py  rag_evaluation.py
