[project]
name = "skala-ai-service"
version = "0.1.0"
description = "Dependencies for skala ai service project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.7",
    "faiss-cpu>=1.12.0",
    "fastmcp>=2.12.4",
    "finance-datareader>=0.9.96",
    "google-genai>=1.30.0",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-chroma>=0.2.5",
    "langchain-cohere>=0.4.6",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langchain-teddynote>=0.5.4",
    "langchain-upstage>=0.7.3",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langgraph-checkpoint-redis>=0.1.2",
    "langgraph-supervisor>=0.0.31",
    "matplotlib>=3.10.7",
    "mcp>=1.21.0",
    "mcp[cli]>=1.13.1",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "opencv-python-headless>=4.12.0.88",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "psycopg2>=2.9.11",
    "psycopg[binary,pool]>=3.2.12",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.48.1",
    "yfinance>=0.2.66",
]
